Prevent interaction with invisible elements

--- a/css/svg_style.css
+++ b/css/svg_style.css
@@ -35,6 +35,6 @@ g {
   fill: #A6192E
 }
 
-.inform {
+.visible > g > .inform {
   cursor: help;
 }
